<resources>
    <string name="app_name">Easy Expense Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_photo">Add Photo</string>
    <string name="save">Save</string>
    <string name="expense_title">Expense Title</string>
    <string name="title">Title</string>
    <string name="amount">Amount ($)</string>
    <string name="payee">Payee</string>
    <string name="running_total">Running Total:</string>
    <string name="save_changes">Save Changes</string>
    <string name="expense_photo_description">Photo attached to this Expense</string>
    <string name="expense_removed">Expense removed</string>
    <string name="undo">Undo</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_existing_photo">Choose Existing Photo</string>
    <string name="done">Done</string>
    <string name="replace_photo">Replace</string>
    <string name="content_description_delete_photo">Delete the attached photo</string>
    <string name="delete_attached_image">Delete Attached Image?</string>
    <string name="add_expense_report">Add Expense Report</string>
    <string name="comments">Comments</string>
    <string name="expense_report">Expense Report</string>
    <string name="expense_reports">Expense Reports</string>
    <string name="reports">Reports</string>
    <string name="expenses">Expenses</string>
    <string name="expense_list">Expense List</string>
    <string name="report_list">Report List</string>
    <string name="assign_report">Assign to Expense Report</string>
    <string name="submitted_date">Submitted Date</string>
    <string name="add_submitted_date">Add Submitted Date</string>
    <string name="remove_submitted_date">Remove Submitted Date</string>
    <string name="view_expenses">View Expenses</string>
    <string name="report_expenses_format">%1$s: Expenses</string>
    <string name="report_settings">Report Settings</string>
    <string name="select_expenses">Select Expenses</string>
    <string name="select_report">Select Report</string>
    <string name="new_report">+ Add Report</string>
    <string name="expenses_attached">Expenses Attached</string>
    <string name="share_image">Share Image</string>
    <string name="choose_image">Choose Image</string>
    <string name="delete">Delete</string>
    <string name="report_removed">Report Removed</string>
</resources>
