<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/detail_parent_layout"
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btn_save"
                style="@style/button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="18sp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_expense_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:inputType="textCapWords"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_expense_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/amount"
                    android:inputType="numberDecimal"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/et_payee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/payee"
                    android:inputType="textCapWords"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/comments"
                    android:imeActionLabel="@string/done"
                    android:inputType="textCapSentences"
                    android:maxLines="5"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="4dp"
                android:text="@string/expense_report"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_reports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/ll_image_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_ripple"
                android:paddingBottom="12dp"
                android:paddingTop="12dp">

                <ImageView
                    android:id="@+id/iv_expense_photo"
                    android:layout_width="@dimen/thumbnail_size"
                    android:layout_height="@dimen/thumbnail_size"
                    android:contentDescription="@string/expense_photo_description"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/btn_replace_photo"
                    style="@style/button_text"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/replace_photo"
                    android:textSize="14sp"/>

                <ImageView
                    android:id="@+id/btn_delete_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/selector_ripple"
                    android:contentDescription="@string/content_description_delete_photo"
                    android:src="@drawable/ic_delete"
                    android:tint="@color/colorAccent"/>
            </LinearLayout>

            <TextView
                android:id="@+id/btn_add_photo"
                style="@style/button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="10dp"
                android:text="@string/add_photo"
                android:textSize="18sp"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>